Fix Sonar issues: Replace Stream.collect() with Stream.toList() and remove unused method parameters